# Streamlens

./: .gitignore  BUG.md  README.md  batch.py  cache.py  config.py  environment.yml  extractor.py  health.py  models.py  platforms.py  pyproject.toml  search.py  ssh.py  transcript.py  validators.py  video_mcp_server.py
.claude/commands/: streamlens.md
src/streamlens/: __init__.py  analyzer.py  cli.py
src/streamlens/extractors/: bilibili.py
tests/: test_audio.py  test_batch.py  test_cache.py  test_config.py  test_extractor.py  test_health.py  test_platforms.py  test_search.py  test_ssh.py  test_transcript.py  test_validators.py
